# audio-trimmer

./: build.gradle  settings.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavcodec/: codec_par.h  defs.h  vorbis_parser.h
app/src/main/cpp/ffmpeg/arm64-v8a/include/libavutil/: detection_bbox.h  display.h  hwcontext.h  hwcontext_vulkan.h  motion_vector.h  parseutils.h  timecode.h
app/src/main/cpp/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavfilter/: buffersrc.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavformat/: avformat.h
app/src/main/cpp/ffmpeg/armeabi-v7a/include/libavutil/: aes_ctr.h  avutil.h  hdr_dynamic_metadata.h  hdr_dynamic_vivid_metadata.h  hwcontext_cuda.h  hwcontext_drm.h  hwcontext_vaapi.h  mastering_display_metadata.h  mathematics.h  spherical.h
app/src/main/cpp/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/x86/include/libavcodec/: ac3_parser.h  packet.h
app/src/main/cpp/ffmpeg/x86/include/libavdevice/: avdevice.h
app/src/main/cpp/ffmpeg/x86/include/libavfilter/: avfilter.h  buffersink.h
app/src/main/cpp/ffmpeg/x86/include/libavutil/: film_grain_params.h  frame.h  hwcontext_opencl.h  hwcontext_vdpau.h  pixfmt.h  tx.h
app/src/main/cpp/ffmpeg/x86/include/libswscale/: swscale.h
app/src/main/cpp/ffmpeg/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/ffmpeg/x86_64/include/libavcodec/: avcodec.h  bsf.h  codec.h  codec_desc.h  dv_profile.h  packet.h  xvmc.h
app/src/main/cpp/ffmpeg/x86_64/include/libavutil/: dovi_meta.h  downmix_info.h  encryption_info.h  hwcontext_d3d11va.h  hwcontext_qsv.h  (+3 more)
(+61 files in other folders)
